revision of the wording in the presentation

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -9,7 +9,9 @@
     }
    },
    "source": [
-    "# Systematische Einführung in Maschinelles Lernen"
+    "# Systematische Einführung in Maschinelles Lernen\n",
+    "\n",
+    "Björn Kasper, BG ETEM PS-ET ([kasper.bjoern@bgetem.de](mailto:kasper.bjoern@bgetem.de))"
    ]
   },
   {
@@ -69,17 +71,18 @@
     "## Ressourcen\n",
     "\n",
     "- Projekt auf Github: [https://github.com/urmel79/Jupyter_GettingStarted2ML](https://github.com/urmel79/Jupyter_GettingStarted2ML)\n",
-    "    - [Jupyter-Notebook](https://github.com/urmel79/Jupyter_GettingStarted2ML/blob/main/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb)\n",
-    "    - [Getting-Started-Paper](https://github.com/urmel79/Jupyter_GettingStarted2ML/blob/main/Step-by-step_intro_to_ML_with_SVC_and_Iris.pdf)"
+    "    - [Jupyter-Notebook: `*.ipynb`](https://github.com/urmel79/Jupyter_GettingStarted2ML/blob/main/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb)\n",
+    "    - [Getting-Started-Paper: `*.pdf`](https://github.com/urmel79/Jupyter_GettingStarted2ML/blob/main/Step-by-step_intro_to_ML_with_SVC_and_Iris.pdf)\n",
+    "    - [Releases: `*.zip|*.tar.gz`](https://github.com/urmel79/Jupyter_GettingStarted2ML/releases)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4329cff8",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -90,17 +93,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {
       "image/png": {
-       "width": 1100
+       "width": 1000
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " Image(filename = \"./images/coverpage_qr-code.png\", width = 1100)"
+    " Image(filename = \"./images/coverpage_qr-code.png\", width = 1000)"
    ]
   },
   {
@@ -117,7 +120,7 @@
     "<!-- - hohe Anforderungen hinsichtlich der **funktionalen Sicherheit** an **hochautomatisierte** oder **autonome Systeme** und die dafür eingesetzten **KI-Algorithmen**\n",
     "- sicherheitstechnische Bewertbarkeit im Sinne von **Transparenz** (vollständiges Verständnis des Systems) und **Erklärbarkeit** der von der KI getroffenen Entscheidungen derzeit sehr schwierig (insb. bei **Deep Learning**) &rarr; aktuelle Forschung! -->\n",
     "\n",
-    "- Heute: Einsatz von **KI-Algorithmen** in **hochautomatisierten** oder **autonomen Systemen**  \n",
+    "- Heute: **KI-Algorithmen** in **hochautomatisierten** oder **autonomen Systemen** eingesetzt  \n",
     "  &rarr; hohe Anforderungen hinsichtlich der **funktionalen Sicherheit**"
    ]
   },
@@ -165,7 +168,7 @@
     }
    },
    "source": [
-    "- heute etablierte Methoden bzgl. **systematischer Softwareentwurf** und **Test sicherheitsrelevanter Software** nur **bedingt geeignet** (siehe z.B. V-Modell nach DIN EN 61508-3)"
+    "- schwer umsetzbar mit heute etablierten Methoden bzgl. **systematischem Softwareentwurf** und **Test sicherheitsrelevanter Software** (siehe z.B. V-Modell nach DIN EN 61508-3)"
    ]
   },
   {
@@ -182,7 +185,7 @@
     "<!-- - weitere Herausforderung: relativ **geringe Robustheit datengesteuerter Algorithmen** aus dem Bereich des Deep Learning  \n",
     "  &rarr; **kleine Änderungen** in den funktionsbestimmenden **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken -->\n",
     "  \n",
-    "- **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens sind elementar für **Sicherheitsnachweis**  \n",
+    "- elementar für **Sicherheitsnachweis:** **Vorhersagbarkeit** und **Transparenz** des Systemverhaltens  \n",
     "  &rarr; **kleine Änderungen** in **Trainingsdaten** können **große und unvorhersehbare Änderungen** im Systemverhalten bewirken"
    ]
   },
@@ -197,7 +200,7 @@
    "source": [
     "<!-- - Aber: relativ **geringe Robustheit datengesteuerter Algorithmen** (insb. Deep Learning) -->\n",
     "\n",
-    "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien**"
+    "- Ziel: sicherheitstechnische Bewertung oder **Prüfung** bzgl. **funktionaler Sicherheit** nach einheitlichen oder **standardisierten Kriterien** etablieren"
    ]
   },
   {
@@ -265,7 +268,8 @@
     "- Aufgabe für Akteure: Vertrautmachen mit **KI-Grundlagen** (bzgl. **Möglichkeiten** und **Risiken**):\n",
     "  - Funktionsweisen typischer **KI-Algorithmen**\n",
     "  - Anwendung geeigneter **Software-Bibliotheken**\n",
-    "  - Bedienung von **Programmiersystemen**"
+    "  - Bedienung von **Programmierwerkzeugen**\n",
+    "  - systematischer **ML-Workflow**"
    ]
   },
   {
@@ -277,7 +281,7 @@
     }
    },
    "source": [
-    "- Andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich"
+    "- Andernfalls: schwere oder tödliche **Arbeitsunfälle** durch **unzureichend gestaltete KI-basierte Arbeitssysteme** wahrscheinlich!"
    ]
   },
   {
@@ -752,12 +756,14 @@
     "\n",
     "Schritte beim **manuellen Variieren** der **Hyperparameter** des SVC:\n",
     "\n",
-    "- Datensatz vorbereiten\n",
-    "- Plotting-Funktionen für vergleichende Darstellung erstellen\n",
-    "- **Kernel** des SVC variieren\n",
-    "- **Gamma**-Parameter variieren\n",
-    "- **C**-Parameter variieren\n",
-    "- Variation des **Grades** (Ordnung)\n",
+    "- Vorbereitung:\n",
+    "    - Datensatz aufbereiten\n",
+    "    - Plotting-Funktionen für vergleichende Darstellung erstellen\n",
+    "- Paramater-Variation:\n",
+    "    - **Kernel** des SVC variieren\n",
+    "    - **Gamma**-Parameter variieren\n",
+    "    - **C**-Parameter variieren\n",
+    "    - Variation des **Grades** (Ordnung)\n",
     "\n",
     "Ziel: Demonstration des **Einflusses** auf das **Klassifikationsergebnis** durch **manuelle Variation** der einzelnen **Hyperparameter**"
    ]
@@ -809,7 +815,7 @@
    },
    "source": [
     "- Ausblick:\n",
-    "    - Erweiterung um Hinweise zum **Aufbau** eigener realer **ML-Applikationen** und **Erzeugung** geeigneter **Datensätze** für Klassifikation / Regression\n",
+    "    - Erweiterung des Tutorials um Hinweise zum **Aufbau** eigener realer **ML-Applikationen** und **Erzeugung** geeigneter **Datensätze** für Klassifikation / Regression\n",
     "    - Verwendung des ML-Workflows als mögliche **Grundlage für Prüfgrundsätze**  \n",
     "    &rarr; **Review** industrieller **ML-Applikationen**"
    ]
