--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -668,7 +668,7 @@ place in Dresden, which was hosted by the German Social Accident
 Insurance (DGUV). There, the current tutorial was presented to
 interested ML newcomers in the technical occupational safety and health
 of the social accident insurance institutions as part of a separate
-\textbf{Getting Started} workshop.
+\textbf{Getting Started Workshop}.
 
     \hypertarget{german-introduction}{%
 \subsection{German introduction}\label{german-introduction}}
@@ -7411,7 +7411,7 @@ place in Dresden, which was hosted by the German Social Accident
 Insurance (DGUV). There, the current tutorial was presented to
 interested ML newcomers in the technical occupational safety and health
 of the social accident insurance institutions as part of a separate
-\textbf{Getting Started} workshop.
+\textbf{Getting Started Workshop}.
 
 In the \textbf{tutorial}, the \textbf{typical workflow} in
 \textbf{machine learning (ML)} was demonstrated systematically and
