added PyTorch to subsection 'Python packages'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -1360,17 +1360,17 @@ experts for supporting the users in the event of questions or problems
 arising, should be decisive in the selection.
 
 Following trend chart shows how the
-\href{https://insights.stackoverflow.com/trends?tags=pandas\%2Ctensorflow\%2Cnumpy\%2Ckeras\%2Cscikit-learn\%2Cmatplotlib}{popularity
+\href{https://insights.stackoverflow.com/trends?tags=pandas\%2Cnumpy\%2Cmatplotlib\%2Cseaborn\%2Cscikit-learn\%2Ctensorflow\%2Ckeras\%2Cpytorch}{popularity
 of selected python packages} suitable for \textbf{data analysis},
 \textbf{data visualization} and \textbf{machine learning} has evolved
 since 2008:
 
 \begin{figure}
 \centering
-\includegraphics{images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.png}
+\includegraphics{images/2022-11-11_StackOverflowTrends_MLPythonPackages_wide.png}
 \caption{Trend chart shows popularity of selected python packages for
 data analysis, data visualization and machine learning (source:
-\href{https://insights.stackoverflow.com/trends?tags=pandas\%2Ctensorflow\%2Cnumpy\%2Ckeras\%2Cscikit-learn\%2Cmatplotlib}{Stack
+\href{https://insights.stackoverflow.com/trends?tags=pandas\%2Cnumpy\%2Cmatplotlib\%2Cseaborn\%2Cscikit-learn\%2Ctensorflow\%2Ckeras\%2Cpytorch}{Stack
 Overflow Trends}, license: CC BY-SA 4.0)}
 \end{figure}
 
@@ -1469,6 +1469,15 @@ in this section.
   several \textbf{backends}, such as \textbf{TensorFlow},
   \textbf{Microsoft Cognitive Toolkit} and \textbf{Theano}. Keras will
   also not be used in this beginner tutorial.
+\item
+  \href{https://pytorch.org/docs/stable/index.html}{PyTorch} is an
+  optimized open source tensor library for deep learning using GPUs and
+  CPUs. It can be used to create \textbf{Tensor analyses} accelerated by
+  \textbf{GPUs} as well as \textbf{Neural Networks} based on an Autograd
+  system. Proven Python libraries such as \textbf{NumPy}, \textbf{SciPy}
+  and \textbf{Cython} can be used. In Deep Learning, the program library
+  is characterized by a lot of \textbf{flexibility} and a \textbf{high
+  speed}.
 \end{itemize}
 
     \hypertarget{import-python-packages-globally}{%
