small changes to subsection 'Python packages'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -1477,7 +1477,8 @@ in this section.
   system. Proven Python libraries such as \textbf{NumPy}, \textbf{SciPy}
   and \textbf{Cython} can be used. In Deep Learning, the program library
   is characterized by a lot of \textbf{flexibility} and a \textbf{high
-  speed}.
+  speed}. However, PyTorch will also not be used in this beginner
+  tutorial.
 \end{itemize}
 
     \hypertarget{import-python-packages-globally}{%
@@ -7740,7 +7741,7 @@ für seine Geduld mit Papa. Er hätte sicherlich das ein oder andere Mal
 lieber ``Die Sendung mit der Maus'' statt seltsamer Grafiken mit mir auf
 dem Rechner angeschaut.
 
-Dresden, 10.11.2022
+Dresden, 11.11.2022
 
 
     % Add a bibliography block to the postdoc
